# WGSExtractRepo

./: .gitattributes  .gitignore  00README_WGSEv4.txt  Aptfile  Brewfile  Install_macos.command  Install_windows-msys.bat  Library.bat  Library.command  Library_ubuntu.sh  README.md  Uninstall_linux.sh  Uninstall_ubuntu.sh  Uninstall_windows.bat  WGSExtract.bat  WGSExtract.command  WGSExtract_linux.sh  dev-init.sh  dev-launch-library.sh  dev-launch.sh  dev.py  dev_init.py  dev_launch.py  dev_launch_library.py  pyproject.toml  release.json  release_manifest.json  setup_release_local.py
base_reference/: README.md
bootstrap_scripts/: Install_linux.sh  Install_ubuntu.sh  Install_windows.bat  Uninstall_linux.sh  Uninstall_ubuntu.sh
dev/: constants.py  extract_markdown_images.py  init_dev.py  launch.py  launch_library.py  release.py  setup_env.py  setup_release_local.py  utils.py
docs/: CHANGELOG.md  WGS_Extract_Manual.md  WGS_Extract_Manual_Alphav4.md  development.md  genome_readme.md  installer_readme.md  reference_lib_readme.md  release_process.md  scripts_readme.md  vm_test_readme.md
installer_scripts/: Install_linux.sh  Install_macos.command  Install_macos_brew.command  Install_ubuntu.sh  Install_windows.bat  Library.command  Library_linux.sh  Uninstall_macos.command  Uninstall_macos_brew.command  WGSExtract.bat  WGSExtract.command  WGSExtract_linux.sh  WGSExtract_ubuntu.sh  release.json
new_scripts/: bwa_kit_gen_ref.py  compare_refgenomes.py  install_linux.py  uninstall_windows.py
program/: aconv.py  bamfiles.py  commandprocessor.py  countingNs.py  hg38tohg19.py  (+9 more)
(+78 files in other folders)
